Bug 1198934 - Support special-case WebExtension behavior for TypedArrays. r=billm